--- a/Cocos2dWindowsPhone/Cocos2dWindowsPhone.vcxproj.filters
+++ b/Cocos2dWindowsPhone/Cocos2dWindowsPhone.vcxproj.filters
@@ -424,6 +424,9 @@
     <ClCompile Include=".\layers_scenes_transitions_nodes\CCTransitionProgress.cpp">
       <Filter>layers_scenes_transitions_nodes</Filter>
     </ClCompile>
+    <ClCompile Include="cocoa\CCString.cpp">
+      <Filter>cocoa</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include=".\cocoa\CCNS.h">
@@ -729,6 +732,9 @@
       <Filter>include</Filter>
     </ClInclude>
     <ClInclude Include=".\include\CCNotificationCenter.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\ccTypeInfo.h">
       <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
