--- a/Cocos2dWindowsPhone/Cocos2dWindowsPhone.vcxproj
+++ b/Cocos2dWindowsPhone/Cocos2dWindowsPhone.vcxproj
@@ -383,6 +383,7 @@ xcopy .\libraries\$(PlatformTarget)\*.cso ..\HelloWorld\ /y</Command>
     <ClInclude Include=".\support\zip_support\unzip.h" />
     <ClInclude Include=".\support\zip_support\ZipUtils.h" />
     <ClInclude Include=".\targetver.h" />
+    <ClInclude Include="include\CCFileUtils.h" />
     <ClInclude Include="include\ccTypeInfo.h" />
   </ItemGroup>
   <ItemGroup>
