--- a/Cocos2dWindowsPhone/Cocos2dWindowsPhone.vcxproj
+++ b/Cocos2dWindowsPhone/Cocos2dWindowsPhone.vcxproj
@@ -76,8 +76,11 @@
       <OutputFile>$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy .\libraries\$(PlatformTarget)\$(TargetName).* ..\HelloWorld\libraries\$(PlatformTarget)\ /y
-xcopy .\libraries\$(PlatformTarget)\*.cso ..\HelloWorld\ /y</Command>
+      <Command>xcopy .\libraries\$(PlatformTarget)\*.lib ..\HelloWorld\libraries\$(PlatformTarget)\ /y
+xcopy $(OutDir)$(TargetName).dll ..\HelloWorld\libraries\$(PlatformTarget)\  /y
+xcopy $(OutDir)$(TargetName).lib  ..\HelloWorld\libraries\$(PlatformTarget)\  /y
+xcopy $(OutDir)$(TargetName).winmd ..\HelloWorld\libraries\$(PlatformTarget)\ /y
+xcopy $(OutDir)*.cso ..\HelloWorld /y</Command>
       <Message>复制编译之后的文件</Message>
     </PostBuildEvent>
   </ItemDefinitionGroup>
