--- a/Cocos2dWindowsPhone/Cocos2dWindowsPhone.vcxproj.filters
+++ b/Cocos2dWindowsPhone/Cocos2dWindowsPhone.vcxproj.filters
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Resources">
@@ -743,7 +743,7 @@
     <ClInclude Include="include\ccTypeInfo.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\CCFileUtils.h">
+    <ClInclude Include="include\CCFileUtils.h">	
       <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
