Fixed the HelloWorld.

--- a/Cocos2dWindowsPhone/Cocos2dWindowsPhone.vcxproj
+++ b/Cocos2dWindowsPhone/Cocos2dWindowsPhone.vcxproj
@@ -76,11 +76,8 @@
       <OutputFile>$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy .\libraries\$(PlatformTarget)\*.lib ..\HelloWorld\libraries\$(PlatformTarget)\ /y
-xcopy $(OutDir)$(TargetName).dll ..\HelloWorld\libraries\$(PlatformTarget)\  /y
-xcopy $(OutDir)$(TargetName).lib  ..\HelloWorld\libraries\$(PlatformTarget)\  /y
-xcopy $(OutDir)$(TargetName).winmd ..\HelloWorld\libraries\$(PlatformTarget)\ /y
-xcopy $(OutDir)*.cso ..\HelloWorld /y</Command>
+      <Command>
+      </Command>
       <Message>复制编译之后的文件</Message>
     </PostBuildEvent>
   </ItemDefinitionGroup>
@@ -110,8 +107,8 @@ xcopy $(OutDir)*.cso ..\HelloWorld /y</Command>
       <OutputFile>$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy .\libraries\$(PlatformTarget)\$(TargetName).* ..\HelloWorld\libraries\$(PlatformTarget)\ /y
-xcopy .\libraries\$(PlatformTarget)\*.cso ..\HelloWorld\ /y</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
@@ -132,8 +129,8 @@ xcopy .\libraries\$(PlatformTarget)\*.cso ..\HelloWorld\ /y</Command>
       <OutputFile>$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy .\libraries\$(PlatformTarget)\$(TargetName).* ..\HelloWorld\libraries\$(PlatformTarget)\ /y
-xcopy .\libraries\$(PlatformTarget)\*.cso ..\HelloWorld\ /y</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
@@ -155,8 +152,8 @@ xcopy .\libraries\$(PlatformTarget)\*.cso ..\HelloWorld\ /y</Command>
       <OutputFile>$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy .\libraries\$(PlatformTarget)\$(TargetName).* ..\HelloWorld\libraries\$(PlatformTarget)\ /y
-xcopy .\libraries\$(PlatformTarget)\*.cso ..\HelloWorld\ /y</Command>
+      <Command>
+      </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
