--- a/HelloWorld/HelloWorld.vcxproj
+++ b/HelloWorld/HelloWorld.vcxproj
@@ -120,6 +120,14 @@
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <Reference Include="Cocos2dWindowsPhone">
+      <HintPath>libraries\x86\Cocos2dWindowsPhone.winmd</HintPath>
+      <IsWinMDFile>true</IsWinMDFile>
+    </Reference>
+    <Reference Include="CocosDenshionWindowsPhone">
+      <HintPath>libraries\x86\CocosDenshionWindowsPhone.winmd</HintPath>
+      <IsWinMDFile>true</IsWinMDFile>
+    </Reference>
     <Reference Include="platform.winmd">
       <IsWinMDFile>true</IsWinMDFile>
       <Private>false</Private>
@@ -331,14 +339,6 @@
     <None Include="CCTextureAtlasVertexShader.cso">
       <DeploymentContent>true</DeploymentContent>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Cocos2dWindowsPhone\Cocos2dWindowsPhone.vcxproj">
-      <Project>{8c939c76-a430-450e-9607-56cec95dee2f}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\CocosDenshionWindowsPhone\CocosDenshionWindowsPhone.vcxproj">
-      <Project>{54d5a760-05c6-4560-bb0e-6804d248f14a}</Project>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsPhone\v$(TargetPlatformVersion)\Microsoft.Cpp.WindowsPhone.$(TargetPlatformVersion).targets" />
