Updated the CCArray & CCDictionary define

--- a/Cocos2dWindowsPhone/Cocos2dWindowsPhone.vcxproj.filters
+++ b/Cocos2dWindowsPhone/Cocos2dWindowsPhone.vcxproj.filters
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Resources">
@@ -572,12 +572,6 @@
     <ClInclude Include=".\include\CCMotionStreak.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include=".\include\CCMutableArray.h">
-      <Filter>include</Filter>
-    </ClInclude>
-    <ClInclude Include=".\include\CCMutableDictionary.h">
-      <Filter>include</Filter>
-    </ClInclude>
     <ClInclude Include=".\include\CCNode.h">
       <Filter>include</Filter>
     </ClInclude>
@@ -743,7 +737,7 @@
     <ClInclude Include="include\ccTypeInfo.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\CCFileUtils.h">	
+    <ClInclude Include="include\CCFileUtils.h">
       <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
