--- a/Cocos2dWindowsPhone/Cocos2dWindowsPhone.vcxproj.filters
+++ b/Cocos2dWindowsPhone/Cocos2dWindowsPhone.vcxproj.filters
@@ -433,6 +433,12 @@
     <ClCompile Include="particle_nodes\CCParticleBatchNode.cpp">
       <Filter>particle_nodes</Filter>
     </ClCompile>
+    <ClCompile Include="cocoa\CCArray.cpp">
+      <Filter>cocoa</Filter>
+    </ClCompile>
+    <ClCompile Include="cocoa\CCDictionary.cpp">
+      <Filter>cocoa</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include=".\cocoa\CCNS.h">
